# qkd-kem-bench

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  qkd_api_test.sh  qkd_pubkey_test.sh  run_qkd_kem_bench.sh  tls_bench_oqs_50_iter_20250210.csv  tls_bench_qkd_50_iter_20250210.csv
benchmarks/: README.md  config.py  data_analysis.ipynb  functions.py  requirements.txt
logs/: client_log.txt  public_key_hex.txt  server_log.txt  tls_capture.txt  tls_capture_strings.txt
qkd_certs/: account-2507-server-ca-qukaydee-com.crt  ca-certificate-combined.crt  client-root-ca.crt  client-root-ca.key  sae-1.crt  sae-1.key  sae-1.pem  sae-2.crt  sae-2.key  sae-2.pem
scripts/: common.py  common.sh  fullbuild.sh  generate_certs.sh  openssl-ca.cnf  oqs_env.sh  qkd_api_test.sh  run_qkd_kem_bench.sh  run_tls_bench.sh  test_qkd_kem_tls.py  test_tls_bench.sh  test_tls_server.py
test/: CMakeLists.txt  oqs_bench_kems.c  test_common.c  test_common.h  test_oqs_qkd_etsi_wrapper.c
